--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,20 +9,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@bytemd/plugin-gfm": "^1.21.0",
+    "@bytemd/plugin-highlight": "^1.21.0",
+    "@bytemd/plugin-math": "^1.21.0",
+    "@bytemd/vue-next": "^1.21.0",
     "@codemirror/lang-cpp": "^6.0.2",
     "@codemirror/state": "^6.3.1",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@vueuse/core": "^10.6.0",
     "axios": "^1.6.1",
+    "bytemd": "^1.21.0",
     "codemirror": "^6.0.1",
     "current-device": "^0.10.2",
+    "highlight.js": "^11.9.0",
+    "katex": "^0.16.9",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "thememirror": "^2.0.1",
     "vue": "^3.3.4",
     "vue-codemirror": "^6.1.1",
-    "vue-i18n": "^9.4.1",
-    "vue-router": "4"
+    "vue-i18n": "^9.4.1"
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.1",
@@ -32,6 +38,7 @@
     "sass": "^1.69.5",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vue-router": "^4.2.5",
     "vue-tsc": "^1.8.5"
   }
 }
