--- a/packages/ts-api-models/package.json
+++ b/packages/ts-api-models/package.json
@@ -2,10 +2,9 @@
   "name": "ts-api-models",
   "version": "1.0.0",
   "description": "",
-  "types": "./dist/index.d.ts",
-  "main": "./dist/index.js",
   "private": "true",
   "scripts": {
+    "build": "pnpm exec tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
