--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,6 +13,7 @@
     "@bytemd/plugin-highlight": "^1.21.0",
     "@bytemd/plugin-math": "^1.21.0",
     "@bytemd/vue-next": "^1.21.0",
+    "@vue/shared": "^3.4.13",
     "@vueuse/core": "^10.6.0",
     "axios": "^1.6.1",
     "bytemd": "^1.21.0",
