--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,11 +13,14 @@
     "@bytemd/plugin-highlight": "^1.21.0",
     "@bytemd/plugin-math": "^1.21.0",
     "@bytemd/vue-next": "^1.21.0",
+    "@types/d3": "^7.4.3",
     "@vue/shared": "^3.4.13",
     "@vueuse/core": "^10.6.0",
     "axios": "^1.6.1",
     "bytemd": "^1.21.0",
     "current-device": "^0.10.2",
+    "d3": "^7.8.5",
+    "d3-cloud": "^1.2.7",
     "highlight.js": "^11.9.0",
     "katex": "^0.16.9",
     "lodash": "^4.17.21",
@@ -28,9 +31,16 @@
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.1",
+    "@types/d3-array": "^3.2.1",
+    "@types/d3-axis": "^3.0.6",
+    "@types/d3-cloud": "^1.2.9",
+    "@types/d3-scale": "^4.0.8",
+    "@types/d3-selection": "^3.0.10",
     "@types/lodash": "^4.14.201",
     "@types/node": "^20.3.1",
+    "@types/wordcloud": "^1.2.2",
     "@vitejs/plugin-vue": "^5.0.0",
+    "random-words": "^2.0.1",
     "sass": "^1.69.5",
     "ts-api-models": "workspace:*",
     "typescript": "^5.0.2",
