--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "commit": "cz",
     "docs:dev": "vitepress dev",
-    "docs:build": "vitepress build",
+    "docs:build_for_github_pages": "vitepress build --base /blog/",
+    "docs:build_for_server": "vitepress build",
     "docs:preview": "vitepress preview",
     "new": "node scripts/create-post.js"
   },
